--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ composeMultiplatform = "1.8.2"
 junit = "4.13.2"
 kotlin = "2.2.0"
 kotlinx-coroutines = "1.10.2"
-datetime = "0.7.1"
+datetime = "0.7.1-0.6.x-compat"
 exposed = "1.0.0-beta-5"
 h2 = "2.2.224"
 
